--- a/src/templates/lucky/number.html.twig
+++ b/src/templates/lucky/number.html.twig
@@ -1,2 +1,7 @@
 {% extends "base.html.twig" %}
-<h1>Your lucky number is {{ number }}</h1>
+
+{% block content %}
+    
+{{number}}
+
+{% endblock %}
