navbar now correctly sets the active class

--- a/src/templates/lucky/number.html.twig
+++ b/src/templates/lucky/number.html.twig
@@ -1,6 +1,10 @@
 {% extends "base.html.twig" %}
 
-{% block content %}
+{% block title %}
+    Lucky Number
+{% endblock %}
+
+{% block body %}
     
 {{number}}
 
