--- a/src/templates/includes/header.html.twig
+++ b/src/templates/includes/header.html.twig
@@ -1,14 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">PeytzProperties</a>
-  
-    <div class="collapse navbar-collapse" >
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/lucky/number">Lucky Number</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+	<a class="navbar-brand" href="/">PeytzProperties</a>
+
+	<div class="collapse navbar-collapse">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+				<a {% if app.request.attributes.get('_route') starts with 'home' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="/">Home</a>
+			</li>
+			<li class="nav-item">
+				<a {% if app.request.attributes.get('_route') starts with 'lucky_number' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="/lucky/number">Lucky Number</a>
+			</li>
+			<li class="nav-item">
+				<a{% if app.request.attributes.get('_route') starts with 'sell_property' %} class="nav-link active" {% else %} class="nav-link" {% endif %}>Sell Property</a>
+			</li>
+		</ul>
+	</div>
+</nav>
