--- a/src/templates/includes/header.html.twig
+++ b/src/templates/includes/header.html.twig
@@ -2,7 +2,7 @@
 	<a class="navbar-brand" href="/">PeytzProperties</a>
 
 	<div class="collapse navbar-collapse">
-		<ul class="navbar-nav mr-auto">
+		<ul class="navbar-nav mr-auto vw-75">
 			<li class="nav-item">
 				<a {% if app.request.attributes.get('_route') starts with 'home' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="/">Home</a>
 			</li>
@@ -10,8 +10,11 @@
 				<a {% if app.request.attributes.get('_route') starts with 'lucky_number' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="/lucky/number">Lucky Number</a>
 			</li>
 			<li class="nav-item">
-				<a{% if app.request.attributes.get('_route') starts with 'sell_property' %} class="nav-link active" {% else %} class="nav-link" {% endif %}>Sell Property</a>
+				<a{% if app.request.attributes.get('_route') starts with 'sell_property' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="/sell/property">Sell Property</a>
 			</li>
 		</ul>
+		<div class="nav item vw-25 navbar-nav">
+			<a{% if app.request.attributes.get('_route') starts with 'profile' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="/profile" >profile</a>
+		</div>
 	</div>
 </nav>
