Added controller to delete a property

--- a/src/templates/Property/Edit.html.twig
+++ b/src/templates/Property/Edit.html.twig
@@ -8,4 +8,5 @@
 {% if form is defined %}
 {{ form(form) }}
 {% endif %}
+<a class="btn btn-danger" href="/property/delete/{{propertyType}}/{{propertyId}}">Delete</a>
 {% endblock %}
