Added logout link

--- a/src/templates/includes/header.html.twig
+++ b/src/templates/includes/header.html.twig
@@ -16,6 +16,9 @@
 				{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 					<p class="text-light nav-link">Hi
 						{{ app.user.username }}</p>
+						<li class="nav-item">
+				<a class="nav-link"href="/logout">Logout</a>
+			</li>
 					{%else%}
 					<a {% if app.request.attributes.get('_route') starts with 'login' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="/login">Login</a>
 
